SERVER-56354 Ensure that the future chain in checkIfCanReadOrBlock gets interrupted when the command's opCtx is marked as killed

(cherry picked from commit 589020d961aadba1d38ea88d0b3f4b1878bf3be0)